--- a/.gitignore
+++ b/.gitignore
@@ -1,82 +1,212 @@
-# Dependencies
-node_modules/
-vendor/
-/.pnp
-.pnp.js
-.yarn/install-state.gz
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[codz]
+*$py.class
 
-# Build outputs
-_site/
-.sass-cache/
-.jekyll-cache/
-.jekyll-metadata
-/.next/
-/out/
-/build
+# C extensions
+*.so
 
-# Testing
-/coverage
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 
-# IDE files
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
+# PyInstaller
+*.manifest
+*.spec
 
-# OS files
-.DS_Store
-Thumbs.db
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
 
-# Private files
-_email.txt
-about_me.json
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py.cover
+.hypothesis/
+.pytest_cache/
+cover/
+
+# Translations
+*.mo
+*.pot
+
+# Django stuff:
 *.log
-*.tmp
-*.temp
-.tmp/
-.temp/
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
 
-# Local environment
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+.pybuilder/
+target/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# IPython
+profile_default/
+ipython_config.py
+
+# pyenv
+# .python-version
+
+# pipenv
+#Pipfile.lock
+
+# UV
+#uv.lock
+
+# poetry
+#poetry.lock
+#poetry.toml
+
+# pdm
+#pdm.lock
+#pdm.toml
+#.pdm-python
+#.pdm-build/
+
+# pixi
+.pixi
+
+# PEP 582
+__pypackages__/
+
+# Celery stuff
+celerybeat-schedule
+celerybeat.pid
+
+# SageMath parsed files
+*.sage.py
+
+# Environments
 .env
-.env.local
-.env*.local
+.envrc
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
 
-# Bundle
-.bundle/
-vendor/bundle/
+# Spyder project settings
+.spyderproject
+.spyproject
 
-# Next.js
-next-env.d.ts
-.vercel
+# Rope project settings
+.ropeproject
 
-# TypeScript
-*.tsbuildinfo
+# mkdocs documentation
+/site
 
-# Debug
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# pytype static type analyzer
+.pytype/
+
+# Cython debug symbols
+cython_debug/
+
+# PyCharm
+#.idea/
+
+# Abstra
+.abstra/
+
+# Visual Studio Code
+# .vscode/
+
+# Ruff stuff:
+.ruff_cache/
+
+# PyPI configuration file
+.pypirc
+
+# Assistants
+.claude/
+.cursor/
+.cursorignore
+.cursorindexingignore
+.cursorrules
+.gemini/
+.github/copilot-instructions.md
+CLAUDE.md
+GEMINI.md
+
+
+# Marimo
+marimo/_static/
+marimo/_lsp/
+__marimo__/
+
+# Node.js
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
+.pnpm-debug.log*
+.next/
+out/
+.cache/
+.npm/
 .eslintcache
+.turbo
 
-# Optional stylelint cache
-.stylelintcache
+# Environment files
+.env.local
+.env.*.local
 
-# Yarn Integrity file
-.yarn-integrity
+# Docker
+.docker/
 
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
+# Electron
+electronjs/dist/
 
-# Package manager lock files (keep only one)
-# package-lock.json
-# yarn.lock
-# pnpm-lock.yaml
+# Capacitor
+android/
+ios/
+.capacitor/
+
+# OS
+.DS_Store
+Thumbs.db
+Desktop.ini
