--- a/.gitignore
+++ b/.gitignore
@@ -211,3 +211,38 @@ ios/
 .DS_Store
 Thumbs.db
 Desktop.ini
+
+# LaTeX auxiliary and build files
+*.aux
+*.fdb_latexmk
+*.fls
+*.nav
+*.out
+*.snm
+*.synctex.gz
+*.synctex(busy)
+*.toc
+*.log
+*.fdb*
+*.synctex*
+*.bbl
+*.blg
+*.bcf
+*.run.xml
+*.dvi
+*.ps
+*.vrb
+*.idx
+*.ind
+*.ilg
+*.glo
+*.gls
+*.glg
+*.ist
+*.acn
+*.acr
+*.alg
+*.lof
+*.lot
+*.fdb_latexmk
+*.pdf
