--- a/.gitignore
+++ b/.gitignore
@@ -162,6 +162,7 @@ cython_debug/
 .pypirc
 
 # Assistants
+.agents/
 .claude/
 .cursor/
 .cursorignore
@@ -171,14 +172,14 @@ cython_debug/
 .github/copilot-instructions.md
 CLAUDE.md
 GEMINI.md
-
+.mcp.json
 
 # Marimo
 marimo/_static/
 marimo/_lsp/
 __marimo__/
 
-# Node.js
+# Node.js / Bun
 node_modules/
 npm-debug.log*
 yarn-debug.log*
